# open-r1

./: .gitignore  COMMANDS.md  Dockerfile  Dockerfile.train  MORPH_INTEGRATION.md  Makefile  PROJECT_STATUS_SUMMARY.md  PULL_REQUEST.md  README.md  README_AGENTS.md  README_ZH.md  debug.py  debug_original.py  debug_teacher_student.py  delay.bash  generate_fashion_dataset.py  install-docker.sh  pyproject.toml  requirements.txt  run.sh  scratch.ipynb  setup.cfg  setup.py  setup.sh  test_installation.py  test_morph_router.py  token_stat  train_fashion_model.py  train_fashion_model.sh  train_fashion_model_fixed_path.sh
.devcontainer/: devcontainer.json
.github/workflows/: quality.yml  tests.yml
bash/: r1.sh
configs/: default.yaml  reward_model.yaml
docs/: UTILITIES.md
exp/: report_20250130.md
inference/: Qwen2.5-VL-3B-instruct.py
recipes/: README.md  launch.slurm
recipes/DataAgent-7B/: README.md
recipes/DataAgent-7B/sft/: config_v00.00.yaml
recipes/DeepSeek-R1-Fashion/: README.md  accelerate_config.yaml  evaluate_fashion.py  fashion_reward.py  generate_fashion_dataset.py
recipes/Llama-3.1-8B-Instruct/: config_demo.yaml
recipes/OwkinZero/grpo/: config.yaml
recipes/accelerate_configs/: traffic.yaml  zero2.yaml
recipes/coderm/: coderm-config-reward.yaml  coderm-config-server.yaml
recipes/dataset_filtering/: config_demo.yaml  filter_dapo.yaml
recipes/doge/: README.md
recipes/qwen/: README.md
scripts/: analyze_grpo_solution_filter.py  benchmark_e2b.py  benchmark_morph.py  compute_pass_rate.py  decontaminate.py  e2b_router.py  filter_dataset.py  generate_reason_data.py  morph_router.py  run_benchmarks.py  test_generate.py  test_sampling.py  test_sglang_backend.py
scripts/agents/: action_conversion.py  config.py  function_parser.py  get_aguvis_data.py  models.py  prompts.py  qwenvl_collator.py  smolvlm2_collator.py  smolvlm_inference.py
scripts/pass_rate_filtering/: README.md  compute_pass_rate.py  launch_filtering.sh
scripts/training/: README.md  grpo.py  sft.py
slurm/: README.md  compute_pass_rate.slurm  dataset_filter.slurm  e2b_router.slurm  e2b_routor.slurm  evaluate.slurm  generate.slurm  grpo.slurm  morph_router.slurm  sft.slurm  train.slurm  trainsingle.slurm
slurm/piston/: README.md  launch_piston_workers.sh  launch_single_piston.sh
src/open_r1/: __init__.py  configs.py  evaluate.py  generate.py  grounded_rewards.py  grouped_sol_grpo_trainer.py  grpo.py  math_equivalence.py  pipeline.py  reward func for code.py  reward_model.py  rewards.py  run_teacher_student.py  sft.py  teacher_student_model.py  teacher_student_trainer.py
src/tools/: build_from_api.py
tests/: test_api.py  test_grounded_rewards.py  test_grpo.py  test_local_provider.py  test_new_utilities.py  test_rewards.py  test_rewards_code.py
tests/slow/: test_code_reward.py  test_e2b_router.py  test_ioi_reward_morph.py
tests/utils/: test_data.py
(+137 files in other folders)
